<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    tools:context=".activities.SearchActivityConstraint">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/band_avatar"
            android:layout_width="match_parent"
            android:layout_height="207dp"
            android:baselineAligned="false"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/group_information_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/background_dark"
            android:text="@string/search_band_short_info"
            android:textAlignment="center"
            android:textColor="#EEEEEE"
            android:textSize="18sp"
            tools:ignore="RtlCompat" />
    </FrameLayout>


    <TextView
        android:id="@+id/band_name"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/search_band_name"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <EditText
        android:id="@+id/band_name_enter"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />


    <TextView
        android:id="@+id/album_name"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/search_band_album_name"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/album_name_choice"
        android:layout_width="249dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/band_name_enter" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.574">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/decades_label"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:text="@string/search_band_decade"
                android:textAlignment="center"
                android:textSize="18sp" />

            <RadioGroup>

                <RadioButton
                    android:id="@+id/radio_early"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_radio_decade_early" />

                <RadioButton
                    android:id="@+id/radio_elder"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:text="@string/search_radio_decade_elder" />
            </RadioGroup>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/single_label"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:text="@string/search_band_single"
                android:textAlignment="center"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/check_is_single"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckIsSingle"
                    android:text="@string/search_check_is_single" />

                <CheckBox
                    android:id="@+id/check_is_not_single"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckIsNotSingle"
                    android:text="@string/search_check_not_single" />
            </LinearLayout>
        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="367dp"
        android:layout_height="43dp"
        android:layout_marginBottom="196dp"
        android:onClick="onFindBtnClick"
        android:text="@string/search_find_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>