<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddSongsActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="106dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_song_song_name"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_data_song_name"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_data_song_band_name"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_data_song_name" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="106dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/search_band_album_name"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/add_data_album_name"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_data_song_band_name" />

    <EditText
        android:id="@+id/add_data_album_year"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_data_album_name" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="106dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_song_album_year"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="106dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_song_is_single"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="106dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/add_song_id_band"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <CheckBox
        android:id="@+id/add_data_check_is_single"
        android:layout_width="201dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/add_song_is_single_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_data_album_year" />

    <Button
        android:id="@+id/add_data_add_track_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:onClick="onAddSongManageSong"
        android:text="@string/add_song_add_song_button"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songs_id_choice" />

    <Button
        android:id="@+id/add_data_delete_track_button"
        android:layout_width="106dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:onClick="onAddSongDeleteSong"
        android:text="@string/add_song_delete_song_button"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songs_use_check" />

    <Spinner
        android:id="@+id/bands_id_choice"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_data_check_is_single" />

    <Spinner
        android:id="@+id/songs_id_choice"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bands_id_choice" />

    <CheckBox
        android:id="@+id/songs_use_check"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/add_song_use_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="106dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_song_band_name"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>